--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,18 @@
     "psr-4": {
       "App\\": "app/",
       "Config\\": "config/",
-      "Core\\": "core/"
+      "Core\\": "core/",
+      "Enums\\": "enums/"
     },
     "files": [
-      "routes/web.php",
       "core/helpers.php"
     ]
   },
   "require": {
     "larapack/dd": "^1.1",
     "ext-pdo": "*",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "rbdwllr/reallysimplejwt": "^5.0",
+    "ext-http": "*"
   }
 }
